# simple

./: .gitignore  AGENTS.md  CHANGELOG.md  CODEX_CONTEXT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.mdgit  context agent{}.md  dukascopy_multi.py  pyproject.toml  requirements-core.txt  requirements-quantum.txt
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml  release.yml
artifacts/: .gitkeep
config/: frozen-archives.json  legal-event-schema.json
docs/: API.md  ARCHITECTURE.md  FAQ.md  ROADMAP.md  coupling.md  datapipe.md  dynamics.md  edge-tribunal.md  evaluation-protocol.md  integrator.md  legal-event.md  nvidia-coding-engine.md  preregistered-experiments.md  quantum-aer-noise.md  quantum-experiment.md  quantum-frontier.md  quantum-kernel.md  quantum-mps.md  quantum-process-tomography.md  quantum-redteam.md  quantum-reservoir.md  quantum-trajectories.md  repository-verification.md  research-run-manifest.md  stat-arb.md  state-schema.md
fxresearch/: __init__.py
pipeline/: contracts.py  entry_diagnostics.py  estimate_coupling.py  estimate_dynamics.py  evaluation_protocol.py  ingest.py  legal_event.py  quantum_aer_noise.py  quantum_kernel.py  quantum_lindblad.py  quantum_mps.py  quantum_process_tomography.py  quantum_reservoir.py  quantum_trajectories.py  render_quantum_figures.py  schema_validate.py  simulate_integrator.py  stat_arb.py
research/: __init__.py
scripts/: repo_pair_order_scan.py  verify_repository.py
tests/: test_agent_framework.py  test_agent_receipts.py  test_clean_import.py  test_cli.py  test_contracts.py  test_edge_tribunal_adversarial.py  test_edge_tribunal_artifact_binding.py  test_edge_tribunal_audit_log.py  test_edge_tribunal_cli.py  test_edge_tribunal_dataset_binding.py  test_edge_tribunal_dataset_identity.py  test_edge_tribunal_evidence.py  test_edge_tribunal_gates.py  test_edge_tribunal_holdout_registry.py  (+34 more)
(+157 files in other folders)
