[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "engine"
version = "0.1.0"
description = "Causality-first FX dynamics research platform"
requires-python = ">=3.11"

[project.scripts]
auractl = "engine.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["engine*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
