[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "engine"
version = "0.1.0"
description = "Causality-first FX dynamics research platform"
requires-python = ">=3.11"
dependencies = [
  "numpy>=2.4,<2.5",
  "pandas>=3.0,<3.1",
  "pyarrow>=24,<25",
]

[project.optional-dependencies]
quantum-aer = [
  "qiskit==2.4.2",
  "qiskit-aer==0.17.2",
]

[project.scripts]
auractl = "engine.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["engine*"]

[tool.setuptools.package-data]
engine = ["config/*.json", "config/schemas/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
